Fix Spacing on Mobile

--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -1,5 +1,5 @@
 .case__files_modal {
-  padding: 1rem;
+  padding: 0;
 
   &_close-button {
     position: absolute;
